fix charge values for agri

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -458,22 +458,22 @@ This confirms the ultra-low power consumption of the \smip network.
         MAC           &  charge  & lifetime \\
                       & consumed$^\star$ &          \\
         \midrule
-        \tt{30-60-ef} &   695 kC &  4 years \\
-        \tt{38-0f-66} &   461 kC &  6 years \\
-        \tt{3f-f8-20} &   380 kC &  8 years \\
-        \tt{3f-fe-87} &   549 kC &  5 years \\
-        \tt{3f-fe-88} &   718 kC &  4 years \\
-        \tt{58-32-36} &   311 kC &  7 years \\
-        \tt{60-01-f8} &   387 kC &  8 years \\
-        \tt{60-02-1b} &   371 kC &  8 years \\
-        \tt{60-02-4b} &   406 kC &  7 years \\
-        \tt{60-03-82} &   395 kC &  8 years \\
-        \tt{60-05-5f} &   386 kC &  8 years \\
-        \tt{60-05-69} &   509 kC &  6 years \\
-        \tt{60-05-78} &   364 kC &  8 years \\
-        \tt{60-05-ab} &   381 kC &  8 years \\
-        \tt{60-06-27} &   422 kC &  7 years \\
-        \tt{60-08-d5} &   432 kC &  7 years \\
+        \tt{30-60-ef} &  695 KC  &  3 years \\
+        \tt{38-0f-66} &  461 KC  &  5 years \\
+        \tt{3f-f8-20} &  380 KC  &  6 years \\
+        \tt{3f-fe-87} &  549 KC  &  4 years \\
+        \tt{3f-fe-88} &  718 KC  &  3 years \\
+        \tt{58-32-36} &  311 KC  &  6 years \\
+        \tt{60-01-f8} &  387 KC  &  6 years \\
+        \tt{60-02-1b} &  371 KC  &  6 years \\
+        \tt{60-02-4b} &  406 KC  &  6 years \\
+        \tt{60-03-82} &  395 KC  &  6 years \\
+        \tt{60-05-5f} &  386 KC  &  6 years \\
+        \tt{60-05-69} &  509 KC  &  5 years \\
+        \tt{60-05-78} &  364 KC  &  6 years \\
+        \tt{60-05-ab} &  381 KC  &  6 years \\
+        \tt{60-06-27} &  422 KC  &  5 years \\
+        \tt{60-08-d5} &  432 KC  &  5 years \\
         \bottomrule
     \end{tabular}
     \caption{\agri}
