--- a/notebooks/charge.ipynb
+++ b/notebooks/charge.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,203 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of lines = 117382\nnumber of lines removed =  0 ( 0 %)\n"
+      "total number of lines = 117382\nnumber of lines removed =  0 ( 0 %)\nfrom 2016-11-13 10:42:40  to 2017-02-09 13:23:58\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>mac</th>\n",
-       "      <th>charge</th>\n",
-       "      <th>queueOcc</th>\n",
-       "      <th>numTxOk</th>\n",
-       "      <th>numTxBad</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 10:43:41</th>\n",
-       "      <td>1479033821</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39213</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 10:43:41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 10:58:42</th>\n",
-       "      <td>1479034722</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39248</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 10:58:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 11:13:41</th>\n",
-       "      <td>1479035621</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39284</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 11:13:41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 11:28:42</th>\n",
-       "      <td>1479036522</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39320</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 11:28:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 11:43:44</th>\n",
-       "      <td>1479037424</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39356</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 11:43:44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>mac</th>\n",
-       "      <th>charge</th>\n",
-       "      <th>queueOcc</th>\n",
-       "      <th>numTxOk</th>\n",
-       "      <th>numTxBad</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 10:43:41</th>\n",
-       "      <td>1479033821</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39213</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 10:43:41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 10:58:42</th>\n",
-       "      <td>1479034722</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39248</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 10:58:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 11:13:41</th>\n",
-       "      <td>1479035621</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39284</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 11:13:41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 11:28:42</th>\n",
-       "      <td>1479036522</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39320</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 11:28:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-13 11:43:44</th>\n",
-       "      <td>1479037424</td>\n",
-       "      <td>00-17-0d-00-00-38-00-63</td>\n",
-       "      <td>39356</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48.84202</td>\n",
-       "      <td>2.3845</td>\n",
-       "      <td>2016-11-13 11:43:44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -264,7 +69,9 @@
     "\n",
     "df_clean.loc[:, \"date\"] = pd.to_datetime(df_clean.time, unit='s')\n",
     "df_clean.set_index(df_clean[\"date\"], inplace=True)\n",
-    "df_clean.head()"
+    "df_clean.head()\n",
+    "\n",
+    "print \"from\", df_clean.date.min(), \" to\", df_clean.date.max()"
    ]
   },
   {
