fixing Univ. to Universidad

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -67,9 +67,9 @@
     \ead{thomas.watteyne@inria.fr}
 
 \address[inria]{~Inria, EVA team, Paris, France}
-\address[utn]{~Univ. Tecnol\'ogica Nacional (UTN), Mendoza, Argentina}
-\address[udp]{~Univ. Diego Portales, Santiago, Chile}
-\address[uoc]{~Univ. Oberta de Catalunya, Barcelona, Catalonia, Spain}
+\address[utn]{~Universidad Tecnol\'ogica Nacional (UTN), Mendoza, Argentina}
+\address[udp]{~Universidad Diego Portales, Santiago, Chile}
+\address[uoc]{~Universitat Oberta de Catalunya, Barcelona, Catalonia, Spain}
 
 \begin{abstract}
 We deploy two low-power wireless networks, one in a \agri setting (a peach orchard), one in a \building.
