adding network size in intro

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -77,7 +77,7 @@ Both networks use out-of-the-box \smip technology to gather sensor values, as we
 This article presents an in-depth analysis of the performance of both networks, and compares them.
 Nodes in both exhibit end-to-end reliability of 100\%, with an expected lifetime between 4 and 8~years.
 We show how -- contrary to popular belief -- wireless links are symmetric.
-Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology is very stable, with $\leq$15 link changes on average per day in the entire network.
+Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology is very stable, with $\leq$15 link changes on average per day in the entire 14-node network.
 We conclude that \smip is a perfectly suitable IoT solution for \agri and \building applications.
 \end{abstract}
 
