--- a/brun17using.tex
+++ b/brun17using.tex
@@ -435,7 +435,7 @@ These results are very similar to the very initial results presented in~\cite{wa
 
 % description
 
-Each device is powered by a pair of Energizer L-91 AA batteries.
+Each device is powered by a pair of Energizer L-91 AA batteries\footnote{http://data.energizer.com/pdfs/l91.pdf}.
 These contain a nominal 3134~mAh of charge, or 2821~mAh when accounting for a 10\% decrease due to manufacturing differences.
 A \smip node contains a ``charge accounting'' feature in which it tracks the amount of charge it has been drawing from the battery.
 Each mote reports this number every 15~min as a field in its \HRDEVICE health report.
