--- a/brun17using.tex
+++ b/brun17using.tex
@@ -407,6 +407,7 @@ Yet, despite the high external interfere, the \building deployment exhibits 100\
 We expect the \smip network to offer wire-like reliability.
 Table~\ref{tab:net_stats} confirms that this is the case.
 It presents statistics gathered over the 15-25 July 2016 period in the \agri deployment, and over the 12 November 2016 - 12 February 2017 period in the \building deployment.
+Both sensor data and network statistics are taken into account.
 
 \begin{table}
     \centering
