#11 adding related work

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -105,4 +105,22 @@
   organization = {ACM},
 }
 
+@inproceedings{barrenetxea08hitchhiker,
+  author       = {Barrenetxea, Guillermo and Ingelrest, Fran\c{c}ois and Schaefer, Gunnar and Vetterli, Martin},
+  title        = {The Hitchhiker's Guide to Successful Wireless Sensor Network Deployments},
+  booktitle    = {Proceedings of the 6th ACM Conference on Embedded Network Sensor Systems},
+  series       = {SenSys '08},
+  year         = {2008},
+  isbn         = {978-1-59593-990-6},
+  location     = {Raleigh, NC, USA},
+  pages        = {43--56},
+  numpages     = {14},
+  url          = {http://doi.acm.org/10.1145/1460412.1460418},
+  doi          = {10.1145/1460412.1460418},
+  acmid        = {1460418},
+  publisher    = {ACM},
+  address      = {New York, NY, USA},
+  keywords     = {architecture, deployment, environmental monitoring, implementation, wireless sensor network},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
