--- a/brun17using.tex
+++ b/brun17using.tex
@@ -701,7 +701,7 @@ the STIC-AmSud program through the PEACH project,
 the Dust Networks Product Group at Analog Devices,
 the European Commission through the H2020~F-Interop and H2020~ARMOUR projects,
 Inria through the REALMS and DIVERSITY associate teams,
-Felipe Moran for his preciously help in the interference analysis.
+Felipe Moran for his preciously help in the interference analysis,
 and the Spanish Ministry of Economy and the FEDER regional development fund through the SINERGIA project (TEC2015-71303-R).
 
 %==============================================================================
