--- a/brun17using.tex
+++ b/brun17using.tex
@@ -229,7 +229,7 @@ We completely agree with their deployment rules and try to apply them for all ou
 Knowing the deployment difficulties, we decided to use off the shelf products and focus more on the sensor integration and network analysis.
 With more than 60,000 networks deployed around the world, the \smip technology is a proven technology.
 The solution is thoroughly tested and validated for industrial application, with temperature ranging from $-40^{\circ}C$ to $85^{\circ}C$.
-It features over-the-air reprogramming and periodically send network statistic when using the default application (which we do).
+It features over-the-air reprogramming and periodically send network statistics when using the default application (which we do).
 \smip is thus a perfect solution for real-world deployment.
 
 %==============================================================================
