changing eps to png

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -383,12 +383,12 @@ Because of its shape, this is known as the ``waterfall plot''.
 \begin{figure}
     \centering
     \begin{subfigure}[h]{0.49\textwidth}
-        \includegraphics[width=\columnwidth]{waterfall_agri}
+        \includegraphics[width=\columnwidth]{waterfall_agri.png}
         \caption{\agri}
         \label{fig:waterfall_agri}
      \end{subfigure}
      \begin{subfigure}[h]{0.49\textwidth} 
-        \includegraphics[width=\columnwidth]{waterfall_building}
+        \includegraphics[width=\columnwidth]{waterfall_building.png}
         \caption{\building}
         \label{fig:waterfall_building}
     \end{subfigure}
