small change, grade symbol

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -241,8 +241,8 @@ It features over-the-air reprogramming and periodically send network statistics 
 The \agri network is deployed in a peach orchard in Jun\'in, 45~km South-East of Mendoza in Western Argentina.
 No other electronic devices are present in the field.
 Farmers work inside the field with heavy machinery for 1-2~h every 20~days approximately.
-In the region, air temperature ranges between $-$9~C in winter (May-October) to +38~C in summer (November-April).
-Because of the sunny weather, day/night temperature swings of 10+~C are not uncommon in winter.
+In the region, air temperature ranges between $-9^{\circ}C$ in winter (May-October) to $38^{\circ}C$ in summer (November-April).
+Because of the sunny weather, day/night temperature swings of $10^{\circ}C$ are not uncommon in winter.
 
 The \building network is deployed in the Inria-Paris offices (a research institute) in Paris, France.
 It is deployed in a typical 5-story office building, in which light-material walls separate offices which are arranged around a concrete core which houses the elevators.
