--- a/brun17using.bib
+++ b/brun17using.bib
@@ -123,4 +123,14 @@
   keywords     = {architecture, deployment, environmental monitoring, implementation, wireless sensor network},
 }
 
+@article{de2016ieee,
+  title={IEEE 802.15. 4e: A survey},
+  author={De Guglielmo, Domenico and Brienza, Simone and Anastasi, Giuseppe},
+  journal={Computer Communications},
+  volume={88},
+  pages={1--24},
+  year={2016},
+  publisher={Elsevier}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
