#11 WSN for agriculture survey added

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -133,4 +133,13 @@
   publisher={Elsevier}
 }
 
+@article{ojha2015wireless,
+  title={Wireless sensor networks for agriculture: The state-of-the-art in practice and future challenges},
+  author={Ojha, Tamoghna and Misra, Sudip and Raghuwanshi, Narendra Singh},
+  journal={Computers and Electronics in Agriculture},
+  volume={118},
+  pages={66--84},
+  year={2015},
+  publisher={Elsevier}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
