--- a/brun17using.tex
+++ b/brun17using.tex
@@ -305,7 +305,13 @@ Table~\ref{tab:msg_stats} summarizes the number of events and HRs gathered durin
     \item[-] \textbf{\HRNEIGHBORS.}
         Two nodes are neighbors when link-layer resources are installed for them to communicate.
         The neighbors of a node are a subset of the discovered neighbors.
-        Every 15~min, each note generates an \HRNEIGHBORS health report that contains its list of neighbors.
+        SmartMesh IP's networks automatically form meshes, so each mote has multiple neighbors 
+        through which it can send or forward data. 
+        The manager will make sure every mote has at least the number of parents indicated by numparents parameter, 
+        which value could be setup between one and four. 
+        There are no loops in the mesh topology provided. 
+        A mote having two parents or more is the best balance between robustness and power consumption under most operating conditions.
+        Every 15~min, each mote generates an \HRNEIGHBORS health report that contains its list of neighbors.
         These messages also specifies per-neighbor counters, such as the number of link-layer retransmissions.
         The payload size of an \HRNEIGHBORS is variable as it depends on the number of neighbors used.
 \end{itemize}
