#11 intro to smart agriculture

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -220,6 +220,14 @@ Finally, Section~\ref{sec:conclusion} concludes this article and discusses furth
 \section{Related Work}
 \label{sec:related}
 
+% characterization of smart agriculture and 
+Previous works on \agri \cite{ojha2015wireless} have shown the importance of low-power wireless technologies to deploy easily wireless sensor networks on the field. The less power consumption the motes spend, the longer the network could live on the field without a battery change. On \agri it is desirable to reduce the "human" maintenance at minimum and to ensure a high network reliability in order to deliver data to farmers to help them with their productivity decisions. 
+
+%smart building deployments
+
+% interference + industrial internet + TSCH IEEE 802.15.4e
+
+
 % realworld deployment is hard
 Deploying networks in real-world environment is not an easy task.
 Barrenetxea et al.~\cite{barrenetxea08hitchhiker} give a detailed survey of experimental studies and propose a guide for future deployments from system conception to data analysis and monitoring.
