#11 smart building info

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -142,4 +142,10 @@
   year={2015},
   publisher={Elsevier}
 }
+@misc{king2017smart,
+  title={Smart Buildings: Using Smart Technology to Save Energy in Existing Buildings},
+  author={King, Jennifer and Perry, Christopher},
+  year={2017},
+  publisher={Washington, DC: ACEEE. aceee. org/research-report/a1701}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
