--- a/brun17using.tex
+++ b/brun17using.tex
@@ -221,11 +221,19 @@ Finally, Section~\ref{sec:conclusion} concludes this article and discusses furth
 \label{sec:related}
 
 % characterization of smart agriculture and 
-Previous works on \agri \cite{ojha2015wireless} have shown the importance of low-power wireless technologies to deploy easily wireless sensor networks on the field. The less power consumption the motes spend, the longer the network could live on the field without a battery change. On \agri it is desirable to reduce the "human" maintenance at minimum and to ensure a high network reliability in order to deliver data to farmers to help them with their productivity decisions. 
+Previous works on \agri \cite{ojha2015wireless} have shown the importance of low-power wireless technologies to deploy easily wireless sensor networks on the field. The less power consumption the motes spend, the longer the network could live on the field without a battery change. On \agri it is desirable to reduce the "human" maintenance at minimum and to ensure a high network reliability in order to deliver data to farmers to help them with their productivity decisions. Key requirements for this deployments are low maintenance, energy-efficiency, robust architecture, ease of operation and interoperability.
 
 %smart building deployments
-
+Smart buildings save energy by automating controls and optimizing systems and add value to leasing and sales of properties \cite{king2017smart}. \building applications also have to face more interference problems, because the sensor network has to perform in the middle of other wireless technologies such as Wifi and Bluetooth, sharing the spectrum with them. 
 % interference + industrial internet + TSCH IEEE 802.15.4e
+The IEEE has released the 802.15.4e amendment that
+introduces a number of enhancements to the MAC
+layer of the original 802.15.4 standard to overcome its limitations \cite{de2016ieee}, 
+such as low reliability, no protection against interference and unbounded packet delay. 
+Also, IEEE 802.15.4e is considered the base of the industrial Internet of things stack.
+
+
+
 
 
 % realworld deployment is hard
