--- a/brun17using.tex
+++ b/brun17using.tex
@@ -161,16 +161,6 @@ In the \building deployment, we use 2 types of \smip devices: 11~DC9003 boards (
 For both deployments, the gateway is composed of a Raspberry~Pi single-board computer connected to a DC2274 \smip manager over USB.
 All boards are off-the-shelf, manufactured by Analog Devices.
 
-% technology
-
-\smip is a product line developed by the Dust Networks Product Group at Analog Devices.
-The \smip network stack is based on 6LowPAN and the 802.15.4e standards and provides an API for the user to write applications.
-The \smip network implements the IEEE802.15.4 TSCH mode~\cite{std_ieee802154_2015}, which includes a channel-hopping mechanism to reduce the impact of multi-path fading and external interference.
-This allows the network to be highly reliable, stable, and extremely low power~\cite{watteyne10mitigating,watteyne09reliability}.
-More information can be found on the manufacturer documentation~\cite{smip_app_note}.
-We use the default application where each mote produces a temperature value every 30~s, and network statistics every 5~min.
-We extract 3~months of data for each deployment, resulting in over 4~million temperature values, and more than 350,000~network statistic measurements for each deployment.
-
 \begin{figure}
     \centering
     \begin{subfigure}[h]{0.70\textwidth}
@@ -232,10 +222,6 @@ layer of the original 802.15.4 standard to overcome its limitations \cite{de2016
 such as low reliability, no protection against interference and unbounded packet delay. 
 Also, IEEE 802.15.4e is considered the base of the industrial Internet of things stack.
 
-
-
-
-
 % realworld deployment is hard
 Deploying networks in real-world environment is not an easy task.
 Barrenetxea et al.~\cite{barrenetxea08hitchhiker} give a detailed survey of experimental studies and propose a guide for future deployments from system conception to data analysis and monitoring.
@@ -244,9 +230,17 @@ We completely agree with their deployment rules and try to apply them for all ou
 % we focus on network statistic (why smartmesh)
 Knowing the deployment difficulties, we decided to use off the shelf products and focus more on the sensor integration and network analysis.
 With more than 60,000 networks deployed around the world, the \smip technology is a proven technology.
+%technology SMIP
+\smip is a product line developed by the Dust Networks Product Group at Analog Devices.
+The \smip network stack is based on 6LowPAN and the 802.15.4e standards and provides an API for the user to write applications.
+The \smip network implements the IEEE802.15.4 TSCH mode~\cite{std_ieee802154_2015}, which includes a channel-hopping mechanism to reduce the impact of multi-path fading and external interference.
+This allows the network to be highly reliable, stable, and extremely low power~\cite{watteyne10mitigating,watteyne09reliability}.
 The solution is thoroughly tested and validated for industrial application, with temperature ranging from $-40^{\circ}C$ to $85^{\circ}C$.
 It features over-the-air reprogramming and periodically send network statistics when using the default application (which we do).
 \smip is thus a perfect solution for real-world deployment.
+More information can be found on the manufacturer documentation~\cite{smip_app_note}.
+We use the default application where each mote produces a temperature value every 30~s, and network statistics every 5~min.
+We extract 3~months of data for each deployment, resulting in over 4~million temperature values, and more than 350,000~network statistic measurements for each deployment.
 
 %==============================================================================
 \section{Statistics Collected}
