--- a/brun17using.tex
+++ b/brun17using.tex
@@ -211,10 +211,10 @@ Finally, Section~\ref{sec:conclusion} concludes this article and discusses furth
 \label{sec:related}
 
 % characterization of smart agriculture and 
-Previous works on \agri \cite{ojha2015wireless} have shown the importance of low-power wireless technologies to deploy easily wireless sensor networks on the field. The less power consumption the motes spend, the longer the network could live on the field without a battery change. On \agri it is desirable to reduce the "human" maintenance at minimum and to ensure a high network reliability in order to deliver data to farmers to help them with their productivity decisions. Key requirements for this deployments are low maintenance, energy-efficiency, robust architecture, ease of operation and interoperability.
+Previous works on \agri \cite{ojha2015wireless} have shown the importance of low-power wireless technologies to deploy easily wireless sensor networks on the field. The less power consumption the motes spend, the longer the network could live on the field without a battery change. On \agri it is desirable to reduce the "human" maintenance at minimum and to ensure a high network reliability. A high deliver rate is important to farmers because they need the data for their productivity decisions and for the real time monitoring of critical applications, e.g, frost detection. Key requirements for this deployments are low maintenance, energy-efficiency, robust architecture, ease of operation and interoperability.
 
 %smart building deployments
-Smart buildings save energy by automating controls and optimizing systems and add value to leasing and sales of properties \cite{king2017smart}. \building applications also have to face more interference problems, because the sensor network has to perform in the middle of other wireless technologies such as Wifi and Bluetooth, sharing the spectrum with them. 
+Smart buildings save energy by automating controls and optimizing systems which is adding value to leasing and sales of properties \cite{king2017smart}. \building applications also have to face more interference problems, because the sensor network has to perform in the middle of other wireless technologies such as Wifi and Bluetooth, sharing the spectrum with them. 
 % interference + industrial internet + TSCH IEEE 802.15.4e
 The IEEE has released the 802.15.4e amendment that
 introduces a number of enhancements to the MAC
@@ -228,7 +228,7 @@ Barrenetxea et al.~\cite{barrenetxea08hitchhiker} give a detailed survey of expe
 We completely agree with their deployment rules and try to apply them for all our deployments.
 
 % we focus on network statistic (why smartmesh)
-Knowing the deployment difficulties, we decided to use off the shelf products and focus more on the sensor integration and network analysis.
+Knowing the deployment difficulties and the previous requirements mentioned, we decided to use off the shelf products and focus more on the sensor integration and network analysis.
 With more than 60,000 networks deployed around the world, the \smip technology is a proven technology.
 %technology SMIP
 \smip is a product line developed by the Dust Networks Product Group at Analog Devices.
