--- a/brun17using.tex
+++ b/brun17using.tex
@@ -622,7 +622,7 @@ Results are presented in Fig.~\ref{fig:tab_symmetry}.
 
 % discussion
 
-Fig.~\ref{fig:tab_symmetry} shows that the RSSI difference never exceeds a couple of dB.
+Fig.~\ref{fig:tab_symmetry} shows that the RSSI difference, in most of the cases, exceeds a couple of dB the average value of the distribution.
 Looking at Fig.~\ref{fig:waterfall}, this translates into only a handful of percentage points difference in PDR.
 This means the links can be considered symmetric.
 This result is in-line with the physical phenomenon that the signal traveling from $A$ to $B$ undergoes the same attenuation as that from $B$ to $A$.
