#20 quit C of mathematical mode in latex

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -235,7 +235,7 @@ With more than 60,000 networks deployed around the world, the \smip technology i
 The \smip network stack is based on 6LowPAN and the 802.15.4e standards and provides an API for the user to write applications.
 The \smip network implements the IEEE802.15.4 TSCH mode~\cite{std_ieee802154_2015}, which includes a channel-hopping mechanism to reduce the impact of multi-path fading and external interference.
 This allows the network to be highly reliable, stable, and extremely low power~\cite{watteyne10mitigating,watteyne09reliability}.
-The solution is thoroughly tested and validated for industrial application, with temperature ranging from $-40^{\circ}C$ to $85^{\circ}C$.
+The solution is thoroughly tested and validated for industrial application, with temperature ranging from $-40^{\circ}$C to $85^{\circ}$C.
 It features over-the-air reprogramming and periodically send network statistics when using the default application (which we do).
 \smip is thus a perfect solution for real-world deployment.
 More information can be found on the manufacturer documentation~\cite{smip_app_note}.
@@ -251,8 +251,8 @@ We extract 3~months of data for each deployment, resulting in over 4~million tem
 The \agri network is deployed in a peach orchard in Jun\'in, 45~km South-East of Mendoza in Western Argentina.
 No other electronic devices are present in the field.
 Farmers work inside the field with heavy machinery for 1-2~h every 20~days approximately.
-In the region, air temperature ranges between $-9^{\circ}C$ in winter (May-October) to $38^{\circ}C$ in summer (November-April).
-Because of the sunny weather, day/night temperature swings of $10^{\circ}C$ are not uncommon in winter.
+In the region, air temperature ranges between $-9^{\circ}$C in winter (May-October) to $38^{\circ}$C in summer (November-April).
+Because of the sunny weather, day/night temperature swings of $10^{\circ}$C are not uncommon in winter.
 
 The \building network is deployed in the Inria-Paris offices (a research institute) in Paris, France.
 It is deployed in a typical 5-story office building, in which light-material walls separate offices which are arranged around a concrete core which houses the elevators.
